--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -9,6 +9,9 @@ on:
       - created
 
 jobs:
+  build:
+    if: github.event_name != 'release'
+
   publish-gpr:
     runs-on: ubuntu-latest
     permissions:
@@ -17,6 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - uses: mstachniuk/ci-skip@v1
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
