--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/flavou45/select2-multi-checkboxes.git"
   },
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Plugin to select2 (https://github.com/select2/select2) allowing multiple selection while retain old good dropdown.",
   "bugs": {
     "url": "https://github.com/flavou45/select2-multi-checkboxes/issues"
@@ -21,7 +21,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-	  "select2": "^4.0.13"
+	  "select2": "^4.0.13",
+    "jquery.nicescroll": "^3.7.6"
   },
   "publishConfig": {
 	  "registry":"https://npm.pkg.github.com"
